@@ -14,9 +14,9 @@ import com.stockInformation.tickerSummary.entity.TickerSummary;
 import com.stockInformation.tickerSummary.repository.TickerSummaryRepository;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.Objects;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.*;
@@ -34,7 +34,7 @@ class TickerSummaryServiceTest {
     void testFindByTicker() {
         // Given
         TickerSummary tickerSummary = new TickerSummary("AAPL", new BigDecimal("150.00"));
-        when(tickerSummaryRepository.findByTickerIgnoreCase("AAPL")).thenReturn(Optional.of(tickerSummary));
+        when(tickerSummaryRepository.findByTickerIgnoreCase("aapl")).thenReturn(Optional.of(tickerSummary));
 
         // When
         Optional<TickerSummary> result = tickerSummaryService.findByTicker("AAPL");
@@ -42,15 +42,16 @@ class TickerSummaryServiceTest {
         // Then
         assertThat(result).isPresent();
         assertThat(result.get()).isEqualTo(tickerSummary);
-        verify(tickerSummaryRepository).findByTickerIgnoreCase("AAPL");
+        verify(tickerSummaryRepository).findByTickerIgnoreCase("aapl");
     }
 
     @Test
     void testFindAllWithPageable() {
         // Given
         Pageable pageable = PageRequest.of(0, 20);
-        List<TickerSummary> tickerSummaries = Arrays.asList(new TickerSummary("AAPL", new BigDecimal("150.00")));
-        Page<TickerSummary> page = new PageImpl<>(tickerSummaries, pageable, 1);
+    List<TickerSummary> tickerSummaries = List.of(new TickerSummary("AAPL", new BigDecimal("150.00")));
+    Objects.requireNonNull(tickerSummaries, "tickerSummaries must not be null for test");
+    Page<TickerSummary> page = new PageImpl<>(tickerSummaries, pageable, 1);
         when(tickerSummaryRepository.findAll(pageable)).thenReturn(page);
 
         // When
